Changed layout of nav, fixed layout issues with main tag, created quote componet, implemented better layout for footer

--- a/src/styles/base/base.css
+++ b/src/styles/base/base.css
@@ -13,6 +13,9 @@ body {
 }
 
 body,
+p,
+blockquote,
+figure,
 ul,
 ol,
 li,
