--- a/src/styles/layout/app.css
+++ b/src/styles/layout/app.css
@@ -1,18 +1,17 @@
 html {
   width: 100vw;
-  padding: var(--spacing-8);
+  padding: var(--spacing-20);
 }
 
 body {
   display: flex;
   flex-direction: column;
-  gap: var(--spacing-20);
-  margin: auto;
   max-width: var(--breakpoint-md);
   width: 100%;
 }
 
 main {
+  margin: var(--spacing-15) 0;
   display: flex;
   flex-direction: column;
 }
